--- a/templates/blog/post/list.html
+++ b/templates/blog/post/list.html
@@ -4,7 +4,13 @@
 {% block content %}
 <div class="container">
   <div class="row mt-3 d-flex justify-content-center">
+    {% if tag %}
+      <h3 class="text-center mb-4">posts with tag {{tag}}</h3>
+    {% else %}
     <h3 class="text-center mb-4">list of posts</h3>
+    {% endif %}
+    
+    
     {% for post in posts %}
     <div class="col-lg-3 col-md-4 colo-sm-6 col m-2">
       <div class="card" style="width: 18rem;">
